# ft_linear_regression

./: .gitignore  Cargo.toml  README.md  data2.csv  graph.html  package-lock.json  package.json
lr_lib/: Cargo.toml
lr_lib/src/: csv_parsing.rs  factors.rs  gradient_descent.rs  lib.rs  price.rs  types.rs
src/predict/: main.rs
src/train/: main.rs
