[package]
name = "lr_lib"
version = "0.1.0"
authors = ["cledant <cledant@student.42.fr>"]
edition = "2018"

[dependencies]
csv = "1.0.7"
serde = "1.0.91"
serde_derive = "1.0.91"

[profile.release]
lto = true
debug = false
panic = 'abort'
opt-level = 3
incremental = false
overflow-checks = false
debug-assertions = false
